tests/type_errors/elif.pylambda
if true or false {
    print true;
} elif 1 + 1 {
    print false;
} else {
    print false;
}
print 1;